<resources>
    <string name="app_name" translatable="false">ReFood</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="tape">Tape</string>
    <string name="main_page">Main Page</string>
    <string name="profile">Profile</string>
    <string-array name="categories_food">
        <item>Soups</item>
        <item>Main dishes</item>
        <item>Hot appetizers</item>
        <item>Cold platter</item>
        <item>Salads</item>
        <item>Desserts</item>
    </string-array>
    <string name="soups">Soups</string>
    <string name="ok">Yes</string>
    <string name="main_dishes">Main dishes</string>
    <string name="hot_appetizers">Hot appetizers</string>
    <string name="cold_platter">Cold platter</string>
    <string name="salads">Salads</string>
    <string name="desserts">Desserts</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="info">Info</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="fill">fill in all the fields and add photo!</string>
    <string name="add_image">Add image</string>
    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="log_in">Login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="dont_have_account">Don\'t have an account? Sign up!</string>
    <string name="login">Login</string>
    <string name="already_have_account">Already have an account? Sign in!</string>
    <string name="logout">Logout</string>
    <string name="default_web_client_id">386006535418-8jclrquc65fobdgaone39m8a21dnfhkr.apps.googleusercontent.com</string>
    <string name="email">Email</string>
    <string name="steps">Steps</string>
    <string name="detail_info">Detail info</string>
    <string name="add_steps">+ Add step</string>
    <string name="time">Time</string>
    <string name="step">Step</string>
    <string name="name">Name</string>
    <string name="likes">Likes</string>
    <string name="dislikes">Dislikes</string>
    <string name="marked">Marks</string>
    <string name="myreciepts">My receipts ></string>
    <string name="myallreciepts">My receipts</string>
    <string name="author_of_recipe">Author of recipe</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="popular_recipes">Popular recipes</string>
    <string name="recipe_of_the_day">Recipe of the day</string>
    <string name="categories">Categories</string>
    <string name="dialog_load_message">Are you sure?</string>
    <string name="title_activity_splash_screen" translatable="false">ReFood</string>
    <string name="marked_recipes">Marked</string>
    <string name="there_is_no_internet_connection">There is no internet\n connection</string>
    <string name="add_a_recipe">Add \na recipe</string>
    <string name="withot_marked_posts">You haven\'t saved anyone recipes</string>
    <string name="this_post_is_not_local">This post is not local</string>


</resources>