<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/simple_margin"
                app:layout_constraintTop_toBottomOf="@+id/image_group">


                <TextView
                    android:id="@+id/title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/yeseva_one"
                    android:gravity="left"
                    android:paddingStart="17dp"
                    android:text="@string/title"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editText_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:inputType="text"
                    android:padding="25dp"
                    android:text="Name"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_text" />


                <TextView
                    android:id="@+id/info_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/yeseva_one"
                    android:gravity="left"
                    android:padding="17dp"
                    android:text="@string/info"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText_title" />

                <EditText
                    android:id="@+id/editText_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:padding="25dp"
                    android:text="Name"
                    app:layout_constraintBottom_toTopOf="@id/steps_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/info_text" />


                <TextView
                    android:id="@+id/steps_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/yeseva_one"
                    android:gravity="left"
                    android:padding="17dp"
                    android:text="@string/steps"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText_info" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_steps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/steps_text">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/add_step_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="10dp"
                    android:clickable="true"

                    android:text="@string/add_steps"
                    android:textColor="@color/light_blue"
                    android:textSize="18sp"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_steps" />

                <Button
                    android:id="@+id/apply_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/apply"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/add_step_button" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/image_group"
                android:layout_width="match_parent"
                android:layout_height="130dp"

                android:layout_margin="10dp"
                android:clickable="true"

                app:cardCornerRadius="@dimen/simple_margin"
                app:layout_constraintTop_toTopOf="parent"

                tools:layout_editor_absoluteX="20dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:contentDescription="post_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/example_of_food_photo"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="bottom"
                    android:background="@color/three_fourth_invisible_black">

                    <TextView
                        android:id="@+id/recycler_view_item_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/yeseva_one"
                        android:gravity="center"
                        android:text="@string/add_image"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </FrameLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>