<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".add_Product_Fragment"
    android:background="@drawable/roundstyle">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/image_group"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                app:cardCornerRadius="@dimen/simple_margin"

                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toTopOf="parent"
                >

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:contentDescription="post_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/example_of_food_photo"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="bottom"
                    android:background="@color/three_fourth_invisible_black">

                    <TextView
                        android:id="@+id/recycler_view_item_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/yeseva_one"
                        android:gravity="center"
                        android:text="@string/add_image"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </FrameLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/category_group"

                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:backgroundTint="@color/cardview_dark_background"


                app:cardCornerRadius="@dimen/simple_margin"

                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"

                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@id/image_group">


                <TextView
                    android:id="@+id/Category_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yeseva_one"

                    android:gravity="center"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"

                    android:text="@string/category"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:layout_gravity="bottom"

                    android:background="@color/white_gray"
                    android:entries="@array/categories_food"


                    android:paddingStart="20dp"

                    android:paddingEnd="20dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/label_group"

                android:layout_width="match_parent"
                android:layout_height="100dp"

                android:backgroundTint="@color/white_gray"
                app:cardCornerRadius="@dimen/simple_margin"

                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"

                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@id/category_group">

                <TextView
                    android:id="@+id/label_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@color/cardview_dark_background"

                    android:fontFamily="@font/yeseva_one"
                    android:gravity="center"
                    android:text="@string/title"
                    android:textColor="@color/white"

                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"

                    android:ems="10"
                    android:fontFamily="@font/yeseva_one"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/info_group"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/white_gray"

                app:cardCornerRadius="@dimen/simple_margin"

                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"

                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@id/label_group">

                <TextView
                    android:id="@+id/info_text"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@color/cardview_dark_background"

                    android:fontFamily="@font/yeseva_one"
                    android:gravity="center"
                    android:text="@string/info"
                    android:textColor="@color/white"

                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="20dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="20dp"

                    android:ems="10"

                    android:fontFamily="@font/yeseva_one"
                    android:gravity="top"
                    android:hint="@string/info"
                    android:inputType="textMultiLine"
                    android:maxLines="25"

                    android:minLines="5"
                    android:textSize="20sp" />

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:src="@drawable/baseline_check_24"

        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:backgroundTint="@color/light_gray"/>


</androidx.constraintlayout.widget.ConstraintLayout>